tests/build/cases/widget_new/malformed_property_path3.stderr
error: expected `;`
 --> cases/widget_new/malformed_property_path3.rs:5:28
  |
5 |         zero_ui::properties:margin = 0;
  |                            ^

error[E0433]: failed to resolve: use of undeclared crate or module `margin`
 --> cases/widget_new/malformed_property_path3.rs:5:29
  |
5 |         zero_ui::properties:margin = 0;
  |                             ^^^^^^ not found in `margin`
  |
help: consider importing one of these items
  |
1 | use crate::blank::__properties__::enabled::property;
  |
1 | use crate::blank::__properties__::id::property;
  |
1 | use crate::blank::__properties__::visibility::property;
  |
1 | use zero_ui::prelude::align::property;
  |
    and 412 other candidates
help: if you import `property`, refer to it directly
  |
5 -         zero_ui::properties:margin = 0;
5 +         zero_ui::properties:margin = 0;
  |
